--- a/app/popup.html
+++ b/app/popup.html
@@ -2,35 +2,38 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <!-- build:css styles/popup-vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css styles/main.css -->
     <link href="styles/main.css" rel="stylesheet">
-    <!-- endbuild -->
+  
   </head>
   <body>
-    <h1>Sign Speak</h1>
+    <center>
+
+    
+    <div style="position: relative;">
+      <img src="images/icone-title.png" alt="Sign Speak" class="logo" style="height: 50px; width: 110px;">
+    </div>
+    <hr>
 
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="form-group">
-            <label for="inputText">Text</label>
-            <input type="text" class="form-control" id="inputText" placeholder="Enter text">
+            <label for="inputText">Cliquez sur le bouton "Activer" pour lancer SignSpeak</label>
           </div>
-          <button type="button" class="btn btn-primary" id="btnSpeak">Speak</button>
+          <br>
+          <div class="toggle-button" id="toggle">
+              <div id="activate" class="inactive">Activer</div>
+              <div id="desactivate" class="active">Désactiver</div>
+          </div>        
+          <div id="popup">Déplacez-moi!</div>
         </div>
       </div>
 
-    <!-- build:js scripts/popup-vendor.js -->
-    <!-- bower:js -->
-    <!-- endbower -->
-    <!-- endbuild -->
+      <script>
+       
+    </script>
 
-    <!-- build:js scripts/popup.js -->
     <script src="scripts/popup.js"></script>
-    <!-- endbuild -->
+  </center>
   </body>
 </html>
