--- a/app/popup.html
+++ b/app/popup.html
@@ -1,39 +1,23 @@
-<!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <link href="styles/main.css" rel="stylesheet">
-  
-  </head>
-  <body>
-    <center>
-
-    
-    <div style="position: relative;">
-      <img src="images/icone-title.png" alt="Sign Speak" class="logo" style="height: 50px; width: 110px;">
-    </div>
-    <hr>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="form-group">
-            <label for="inputText">Cliquez sur le bouton "Activer" pour lancer SignSpeak</label>
-          </div>
-          <br>
-          <div class="toggle-button" id="toggle">
-              <div id="activate" class="inactive">Activer</div>
-              <div id="desactivate" class="active">Désactiver</div>
-          </div>        
-          <div id="popup">Déplacez-moi!</div>
-        </div>
-      </div>
-
-      <script>
-       
-    </script>
-
-    <script src="scripts/popup.js"></script>
-  </center>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Popup App</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f9f9f9;
+        }
+        h1 {
+            font-size: 18px;
+            color: #333;
+        }
+    </style>
+</head>
+<body>
+    <h1>Déplacez-moi!</h1>
+</body>
 </html>
