updates of front

--- a/app/index.html
+++ b/app/index.html
@@ -24,8 +24,8 @@
         </div>
         <br>
         <div class="toggle-button" id="toggle">
-          <div id="desactivate" class="inactive">Activer</div>
-          <div id="activate" class="active">Désactiver</div>
+          <div id="activate" class="inactive">Activer</div>
+          <div id="desactivate" class="active">Désactiver</div>
         </div>
         <div id="popup">Déplacez-moi!</div>
       </div>
