regroupement des fichiers concernant les paramètres dans un fichier + ouverture des paramètres en pleine page + changement du texte selon figma

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,7 @@
   <div class="header-container" style="position: relative; display: flex; align-items: center; justify-content: space-between;">
     <img src="images/icone-title.png" alt="Sign Speak" class="logo">
 
-    <!-- Icône engrenage menant aux options -->
-    <a href="option.html" class="settings-icon">
+    <a href="#" id="open-options" class="settings-icon">
       <i class="fas fa-cog"></i>
     </a>
   </div>
