--- a/app/popup.html
+++ b/app/popup.html
@@ -2,14 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <link href="styles/popup.css" rel="stylesheet">
   <title>Popup externe</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 20px;
-    }
-  </style>
 </head>
 <body>
   <h1>Déplacez-moi !</h1>
