open camera in extension

--- a/app/index.html
+++ b/app/index.html
@@ -24,14 +24,15 @@
         </div>
         <br>
         <div class="toggle-button" id="toggle">
-          <div id="desactivate" class="inactive">Activer</div>
-          <div id="activate" class="active">Désactiver</div>
+          <a href="popup.html" >
+            <div id="activate" class="active">Activer</div>
+          </a>
         </div>
-        <div id="popup">Déplacez-moi!</div>
+        </div>
       </div>
     </div>
   </div>
-  <script src="scripts/popup.js"></script>
+  <script src="scripts/index.js"></script>
 </center>
 </body>
 </html>
