--- a/app/popup.html
+++ b/app/popup.html
@@ -2,11 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <link href="styles/popup.css" rel="stylesheet">
-  <title>Popup externe</title>
+  <title>Popup déplaçable</title>
+  <link rel="stylesheet" href="styles/popup.css">
 </head>
 <body>
-  <h1>Déplacez-moi !</h1>
+  <div id="popup" class="draggable">
+    <h1>Déplacez-moi !</h1>
+  </div>
   <script src="scripts/popup-move.js"></script>
 </body>
 </html>
