--- a/app/index.html
+++ b/app/index.html
@@ -23,13 +23,13 @@
         </div>
         <br>
         <div class="toggle-button" id="toggle">
-          <a href="popup.html" ><div id="activate" class="inactive">Activer</div></a>
+          <div id="activate" class="inactive">Activer</div>
           <div id="desactivate" class="active">Désactiver</div>
         </div>
       </div>
     </div>
   </div>
-  <script src="scripts/index.js"></script>
+  <script src="scripts/popup.js"></script>
 </center>
 </body>
 </html>
