--- a/app/popup.html
+++ b/app/popup.html
@@ -5,13 +5,13 @@
   <title>Popup déplaçable</title>
   <link rel="stylesheet" href="styles/popup.css">
 </head>
-<body>
+<body>   
+  <button id="startCapture">Démarrer Capture</button>
+  <video id="videoElement" autoplay playsinline></video>
   <div id="popup" class="draggable">
     <h1>Déplacez-moi !</h1>
   </div>
-  <script src="scripts/popup-move.js"></script>
-  <h2>Capture Vidéo</h2>
-  <button id="startCapture">Démarrer Capture</button>
-  <video id="videoElement" autoplay playsinline></video>
 </body>
+<script src="scripts/popup-move.js" defer></script>
+<script src="scripts/popup-video.js" defer></script> 
 </html>
