update parameters - change of architecture with components - merge

--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,10 @@
   <meta charset="utf-8">
   <link href="styles/main.css" rel="stylesheet">
   <link href="fonts/fontawesome/css/all.min.css" rel="stylesheet">
+  <script src="index.js" defer></script>
 </head>
 <body>
-<center>
+
   <div class="header-container" style="position: relative; display: flex; align-items: center; justify-content: space-between;">
     <img src="images/icone-title.png" alt="Sign Speak" class="logo">
 
@@ -31,6 +32,6 @@
     </div>
   </div>
   <script src="scripts/popup.js"></script>
-</center>
+
 </body>
 </html>
