--- a/app/parameters/general/general.html
+++ b/app/parameters/general/general.html
@@ -1,34 +1,18 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Options - Sign Speak</title>
-    <link rel="stylesheet" href="./general.css">
-    <script src="general.js" defer></script>
-  </head>
-  <body>
-    <div class="container">
+<main class="content">
+  <h1>Général</h1>
 
-      <main class="content">
-        <h1>Général</h1>
+  <section class="section">
+    <h2>Langue</h2>
+    <select id="language-select" class ="select">
+      <option value="fr">Français</option>
+    </select>
+  </section>
 
-        <section class="section">
-          <h2>Langue</h2>
-          <select id="language-select">
-            <option value="fr">Français</option>
-          </select>
-        </section>
-
-        <section class="section">
-          <h2>Extension</h2>
-          <label>
-            <input type="checkbox" id="enable-sign-detection">
-            Activer l'extension
-          </label>
-        </section>
-
-      </main>
-    </div>
-  </body>
-</html>
+  <section class="section">
+    <h2>Extension</h2>
+    <label>
+      <input class="checkbox" type="checkbox" id="enable-sign-detection">
+      Activer l'extension
+    </label>
+  </section>
+</main>
