--- a/app/popup.html
+++ b/app/popup.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <title>Popup déplaçable</title>
   <link rel="stylesheet" href="styles/popup.css">
+
+  <!-- Chargement des modules JavaScript -->
+  <script type="module" src="scripts/popup-move.js"></script>
+  <script type="module" src="scripts/popup-video.js"></script> 
 </head>
 <body>   
   <button id="startCapture">Démarrer Capture</button>
@@ -12,6 +16,4 @@
     <h1>Déplacez-moi !</h1>
   </div>
 </body>
-<script src="scripts/popup-move.js" defer></script>
-<script src="scripts/popup-video.js" defer></script> 
 </html>
