open parameters with buttun

--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   <div class="header-container" style="position: relative; display: flex; align-items: center; justify-content: space-between;">
     <img src="images/icone-title.png" alt="Sign Speak" class="logo">
 
-    <a href="#" id="open-options" class="settings-icon">
+    <a href="./parameters/option.html" id="open-options" class="settings-icon" target="_blank">
       <i class="fas fa-cog"></i>
     </a>
   </div>
