add fetch to request sign

--- a/app/popup.html
+++ b/app/popup.html
@@ -13,7 +13,7 @@
   <button id="startCapture">Démarrer Capture</button>
   <video id="videoElement" autoplay playsinline></video>
   <div id="popup" class="draggable">
-    <h1>Déplacez-moi !</h1>
+    <h1 id="displaySign">Déplacez-moi !</h1>
   </div>
 </body>
 </html>
