--- a/app/popup.html
+++ b/app/popup.html
@@ -11,7 +11,7 @@
 </head>
 <body>   
   <button id="startCapture">Démarrer Capture</button>
-  <video id="videoElement" autoplay playsinline></video>
+  <img  id="videoElement"></img>
   <div id="popup" class="draggable">
     <h1 id="displaySign">Déplacez-moi !</h1>
   </div>
